# south-street-2026

./: .gitignore  .plan.md  LICENSE  Makefile  PRD.md  README.md  docker-compose.yml  index.html  package-lock.json  runtime.config.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
src/: App.tsx  index.css  vite-end.d.ts
src/api/: Dockerfile  jest.config.js  package-lock.json  package.json
src/api/src/: bingo.ts  index.ts  state.test.ts  state.ts  types.ts
src/assets/: bingo_cards.json  config.yml
src/components/: BingoCardDisplay.tsx
src/lib/: bingo.ts  types.ts
src/pybingocards/: .gitignore  Makefile  config-tss-v2.yml  config.yml  generate_bingo_v5.py  generate_winning_summary.py  render_cards_pdf.py  render_cards_v2.py  render_setlist_pdf.py  requirements.txt  rules.md
src/tss-stomp/: README.md  pyproject.toml
src/tss-stomp/.devcontainer/: post-create.sh
src/tss-stomp/scripts/: install-service.sh  service-status.sh  uninstall-service.sh
src/tss-stomp/systemd/: tss-stomp.env.sample  tss-stomp.service
src/tss-stomp/tss_stomp/: api.py  app.py  connection_test.py  get_temperature.py  main.py  pins.py  temp.py
src/tss-stomp/tss_stomp/mock_pin_server/: pins.py  server.py
src/walkon-helper/: README.md  go.mod  go.sum  main.go  setbreak_nonwindows.go  setbreak_windows.go
src/web/: .spark-initial-sha  Dockerfile  index.html  package-lock.json  package.json
src/web/src/: App.tsx  intro-film-style.css  main.css  main.tsx
src/web/src/lib/: api.ts  (+2 more)
tss-stomp/.devcontainer/: devcontainer.json
tss-stomp/tss_stomp/: api.py  main.py
(+40 files in other folders)
