[project]
name = "tss-stomp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "gpiozero>=2.0.1",
    "requests>=2.32.5",
]


# [tool.poe.tasks]
# sync-to-pi   = "rsync . stuart@tss-stomp.lan:/home/stuart/source/tss-stomp"                         # a simple command task